--- a/poms/tycho/pom.xml
+++ b/poms/tycho/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>pom-tycho</artifactId>
+    <version>2.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>openHAB - Tycho settings</name>
